03_infrastructure/ingress/external-access/dev/prometheus/ingressroute-patch-prometheus.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  routes:
    - match: Host(`prometheus.127.0.0.1.xip.io`)
      kind: Rule
      services:
        - name: prometheus-louketo-proxy
          port: 3000
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-tls
spec:
  routes:
    - match: Host(`prometheus.127.0.0.1.xip.io`)
      kind: Rule
      services:
        - name: prometheus-louketo-proxy
          port: 3000
